service.yaml
#service.yaml

# A Service is An abstract way to expose an application running on a set of Pods as a network service.

apiVersion: v1
kind: Service
metadata:
  name: brownbag-website
spec:
  type: ClusterIP
  selector:
    app: brownbag-website
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: http # Port to forward to in the POD
