ingress.yaml
#ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: brownbag-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: brownbag.ba1d16fcdc83447a86a8.australiasoutheast.aksapp.io
      http:
        paths:
          - backend: # How the ingress will handle the requests
              serviceName: brownbag-website # Which service the request will be forwarded to
              servicePort: http # Which port in that service
            path: / # Which path is this rule referring to
